FireSequence added, WorkflowTimeMachine refactoring